# machine-learning-playground

./: .gitignore  .gitmodules  Makefile  README.md  conanfile.txt  detect.py  model_urls.csv  object_detection.ipynb  pyproject.toml  requirements.txt  transfer_learning.ipynb  yolo.ipynb  yolo_opencv.ipynb  yolo_tensorflow.ipynb
