[tool.poetry]
name = "tf-models-playground"
version = "0.1.0"
description = "Playground for TensorFlow models"
authors = ["IDA Kenichiro <ida.kenichiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^9.4.0"
typer = "^0.3.2"
conan = "^1.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
